--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-package_name: mypkg
+package_name: bash
 repository: https://dl-cdn.alpinelinux.org/alpine/v3.18/main
 use_test_repo: false
 ascii_tree: true
